# solarpv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: workflow.yml
docs/: conf.py  index.rst
examples/: balance.py
pytemplate/: __init__.py  main.py
pytemplate/utils/: config.py
solarpv/: balance.py  generation.py  geometry.py  parameters.py  report.py
tests/: test_balance.py  test_main.py
