[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytemplate"
version = "0.0.1"
authors = [
  { name="Martin Klein", email="hi@martinklein.co" },
]
description = "Python template"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pyyaml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0-k/python-template"
"Documentation" = "https://pytemplate.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/0-k/python-template/issues"